k8s/apps/beszel/resources/hub-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beszel-hub
  namespace: beszel
spec:
  ports:
  - name: https
    port: 443
    targetPort: 443
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: beszel-hub
  namespace: beszel
subsets:
- addresses:
  - ip: 192.168.1.4
  - ip: 192.168.10.4
  ports:
  - name: https
    port: 443
